<resources>
    <string name="app_name">alilo</string>
    <string name="action_settings">Settings</string>
    <string name="ljsw">ljsw</string>
    <string name="zxxt">zxxt</string>
    <string name="settings_brightness_text">亮度</string>
    <string name="settings_sound_text">声音</string>
    <string name="settings_timer_text">时间日期</string>
    <string name="settings_project_text">护眼设置</string>
    <string name="recipes_search_confirm">确定</string>
    <string name="settings_wifi_text">Wifi</string>
    <string name="settings_wifi_wlan">WLAN</string>
    <string name="wifi_con">连接</string>
    <string name="wifi_conning">连接中...</string>
	<string name="wifi_pws_dialog_cancel">取消</string>
	<string name="bt_forget_network_text">忘记</string>
	<string name="total_score_unexist">积分数据库不存在.</string>
	<string name="color_shape">01色彩与形状</string>
	<string name="hht_tom">02火火兔和泰姆的一天</string>
	<string name="draw_paste_create">03我们画、我们贴、我们建</string>
	<string name="count_compare">04数数与比较</string>
	<string name="please_pass_the_former_apk">请先通过前面的游戏！</string>
	<string name="zhanghao">帐号</string>
	<string name="mima">密码</string>
	<string name="denglu">登录</string>
	<string name="tuichu">退出</string>
	<string name="DigitalClock">DigitalClock</string>
	<string name="ten">0</string>
	<string name="zhihuibaobao">智慧宝宝</string>
	<string name="fenzu">分组</string>
	<string name="eye_notice">温馨提示：</string>
	<string name="please_input_baby_name">请输入宝宝名字</string>
	<string name="please_input_baby_birthday">请输入宝宝出生年月</string>
	<string name="space_between_name_age">&#160;</string>
	<string name="the_format_age_error">您输入的年龄不符合实际!</string>
	<string name="bady_age_transfer">岁</string>
	<string name="set_successfully">设置成功!</string>
	<string name="not_opened_now">暂未开通!</string>
	<string name="setpassword_success">设置管理密码成功!</string>
	<string name="passworddifferent">两次密码不一样，请重新设置!</string>
	<string name="date">日期设置</string>
	<string name="time">时间设置</string>
	<string name="TIME">Time</string>
	<string name="setting_age_error">设置年龄不符合实际情况!</string>
	<string name="restore_confirm">恢复出厂并关机</string>
	<string name="confirm">确认</string>
	<string name="cancle">取消</string>
	<string name="restore_factory">恢复出厂设置</string>
	<string name="wifi_pwd_length_less">wifi密码不正确</string>
	<string name="safemachinesm">安全机制</string>
    <string name="loading">正在打开wifi...</string>
    <string-array name="ljsw34">
           <item>色彩与形状</item>
           <item>火火兔的一天</item>
           <item>我们来画,贴,建图案</item>
           <item>数数与比较</item>
    </string-array>
	    <string-array name="ljsw45">
           <item>交通常识</item>
           <item>养宠物,学思考</item>
           <item>观察与联想</item>
           <item>观察与注意</item>
		   <item>在儿童活动室</item>
    </string-array>
   <string-array name="ljsw56">
           <item>逻辑游戏</item>
           <item>参观动物园</item>
           <item>农庄里的知识</item>
           <item>数与数字</item>
    </string-array>
    <string-array name="sxkj">
        <item>数数与比较</item>
        <item>分配与顺序</item>
        <item>数与数字</item>
        <item>加减计算</item>
    </string-array>
</resources>