<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/tv_wifi_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/et_wifi_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/bt_wifi_pws_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_weight="1"
            android:background="@drawable/btn_default_normal"
            android:text="@string/wifi_pws_dialog_cancel"
            android:textSize="8pt" />

        <Button
            android:id="@+id/bt_wifi_pws_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_weight="1"
            android:background="@drawable/btn_default_normal"
            android:text="@string/bt_forget_network_text"
            android:textSize="8pt" 
            android:visibility="gone"/>

        <Button
            android:id="@+id/bt_wifi_pws_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_weight="1"
            android:background="@drawable/btn_default_normal"
            android:text="@string/wifi_con"
            android:textSize="8pt" />
    </LinearLayout>

</LinearLayout>