<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="#2B8279"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/timer_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings_timer_text"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/timer_confirm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
			 android:layout_marginLeft="20dp"
            android:text="@string/recipes_search_confirm"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/timer_title_back"
            android:layout_width="40dip"
            android:layout_height="60dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:background="#00000000"
            android:scaleType="centerInside"
            android:src="@drawable/back" />
    </RelativeLayout>

    <TextView
        android:id="@+id/Time"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:textColor="@color/green"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/date_linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff"
            android:orientation="horizontal" >

			 <ImageView
                android:layout_width="44dp"
                android:layout_height="46dp"
				        android:layout_marginTop="12dp"
                android:layout_marginLeft="320dp"
                android:background="@drawable/date" />


            <TextView
                android:id="@+id/setDate"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:text="@string/date"
                android:textSize="20dp" />
            
             <TextView
                android:id="@+id/Date_textview"
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                  android:textColor="#2B8279"
                android:textSize="20dp" />
        </LinearLayout>

       
        <LinearLayout
            android:id="@+id/time_linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

			 <ImageView
                android:layout_width="44dp"
                android:layout_height="46dp"
                android:layout_marginLeft="320dp"
				        android:layout_marginTop="12dp"
                android:background="@drawable/time" />


            <TextView
                android:id="@+id/setTime"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:textSize="20dp" />
            
            <TextView
                android:id="@+id/Time_textview"
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:textColor="#2B8279"
                android:layout_marginTop="20dp"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>